[package]
name = "beep-boop"
version = "0.1.0"
authors = ["Max Gonzih <gonzih@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.4" # make sure this is the latest version
bevy_rapier3d = { version = "0.7", features = [ "simd-stable", "parallel" ] }

rand = "0.8.0"

[profile.dev]
opt-level = 3
